src/components/CTA/CTA.module.scss
@use "../../app/variables" as *;

.cta {
	padding-inline: 109px;
	padding-block: 50px;
	min-height: 220px;
	display: flex;
	align-items: center;
	justify-content: space-between;
	max-width: 1064px;
	margin: 0 auto;
	&Floating {
		position: relative;
		z-index: 20;
		transform: translateY(50%);
		margin-top: -220px;
	}
	@media (max-width: 1200px) {
		margin-inline: 80px;
		padding-inline: 80px;
		padding-block: 40px;
		min-height: 180px;
	}
	@media (max-width: 768px) {
		padding-inline: 30px;
		padding-block: 38px;
		gap: 20px;
	}
	@media (max-width: 640px) {
		flex-direction: column;
		text-align: center;
		padding-block: 30px;
		margin-inline: auto;
		width: calc(100vw - 40px);
	}
	h3 {
		font-size: 3.5rem;
		font-style: normal;
		font-weight: 400;
		line-height: 114.286%;
		font-family: var(--font-playfair-display);
		@media (max-width: 1200px) {
			font-size: 2.4rem;
		}
	}
	a {
		padding: 10px 20px;
		text-transform: uppercase;
		font-size: 1.4rem;
		font-style: normal;
		font-weight: 700;
		line-height: normal;
		letter-spacing: 2.8px;
		text-transform: uppercase;
		text-align: center;
		@media (max-width: 1200px) {
			font-size: 1.2rem;
		}
	}
}

